// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudies should render correctly 1`] = `
<div>
  <section
    class="case-studies"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-index"
        >
          
        Case 
          <!---->
          
        Studies
      
        </h2>
         
        <!---->
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_veeqo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/veeqo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Veeqo logo"
                class="cases-list_item-info-logo cases-list_item-info-veeqo-logotype"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Logistics
              </span>
               
              <h3>
                
        Optimization for Veeqo
      
              </h3>
               
              <p>
                Our DevOps team optimized the infrastructure for Veeqo, an inventory and shipping e-commerce platform, and made it highly efficient, smooth, and cost-effective for our partners.
              </p>
               
              <nuxtlink
                to="/case-studies/veeqo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_itc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/R4TCA-web-application/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="ITC logo"
                class="cases-list_item-info-logo cases-list_item-info-itc-logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Digital transformation
              </span>
               
              <h3>
                
        Ready4Trade Central Asia
      
              </h3>
               
              <p>
                A web app customized for the delivery of export management coaching missions that contributes to the development of intra-regional and international trade in Central Asia
              </p>
               
              <nuxtlink
                to="/case-studies/R4TCA-web-application/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_peklo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/peklo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Peklo Tool for search ad campaigns"
                class="cases-list_item-info-logo cases-list_item-info-peklo-logo"
                height="80"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Contextual ad launcher
              </span>
               
              <h3>
                
        Peklo Tool for better ad campaigns
      
              </h3>
               
              <p>
                Mad Devs developed parsing- and clusterisation-based software that automates keyword grouping and text generation, making the launch of contextual ads two times faster.
              </p>
               
              <nuxtlink
                to="/case-studies/peklo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_sjmc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/sir-john-monash-centre/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="SJMC logo"
                class="cases-list_item-info-logo cases-list_item-info-sjmc-logo"
                height="60"
                src="img.jpg"
                width="133"
              />
               
              <span>
                BYOD
              </span>
               
              <h3>
                
        Sir John Monash Centre
      
              </h3>
               
              <p>
                Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
              </p>
               
              <nuxtlink
                to="/case-studies/sir-john-monash-centre/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;

exports[`CaseStudies should render correctly with type=projects 1`] = `
<div>
  <section
    class="case-studies case-studies--projects"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-projects"
        >
          
        Case 
          <br />
          
        Studies
      
        </h2>
         
        <div
          class="case-studies__fire-icon"
        />
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_veeqo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/veeqo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Veeqo logo"
                class="cases-list_item-info-logo cases-list_item-info-veeqo-logotype"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Logistics
              </span>
               
              <h3>
                
        Optimization for Veeqo
      
              </h3>
               
              <p>
                Our DevOps team optimized the infrastructure for Veeqo, an inventory and shipping e-commerce platform, and made it highly efficient, smooth, and cost-effective for our partners.
              </p>
               
              <nuxtlink
                to="/case-studies/veeqo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_itc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/R4TCA-web-application/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="ITC logo"
                class="cases-list_item-info-logo cases-list_item-info-itc-logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Digital transformation
              </span>
               
              <h3>
                
        Ready4Trade Central Asia
      
              </h3>
               
              <p>
                A web app customized for the delivery of export management coaching missions that contributes to the development of intra-regional and international trade in Central Asia
              </p>
               
              <nuxtlink
                to="/case-studies/R4TCA-web-application/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_peklo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/peklo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Peklo Tool for search ad campaigns"
                class="cases-list_item-info-logo cases-list_item-info-peklo-logo"
                height="80"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Contextual ad launcher
              </span>
               
              <h3>
                
        Peklo Tool for better ad campaigns
      
              </h3>
               
              <p>
                Mad Devs developed parsing- and clusterisation-based software that automates keyword grouping and text generation, making the launch of contextual ads two times faster.
              </p>
               
              <nuxtlink
                to="/case-studies/peklo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_sjmc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/sir-john-monash-centre/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="SJMC logo"
                class="cases-list_item-info-logo cases-list_item-info-sjmc-logo"
                height="60"
                src="img.jpg"
                width="133"
              />
               
              <span>
                BYOD
              </span>
               
              <h3>
                
        Sir John Monash Centre
      
              </h3>
               
              <p>
                Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
              </p>
               
              <nuxtlink
                to="/case-studies/sir-john-monash-centre/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;
